tests/syntax_error/overlong_char.jou
def main() -> int:
    return 'hi'  # Error: single quotes are for specifying a byte, maybe use double quotes to instead make a string?
